# ScreenRecord

./: .gitignore  CMakeLists.txt  README.md
header/: AudioCapture.h  DXGIGraphics.h  Encode.h  GDIGraphics.h  Graphics.h  Logger.h  QBlockingQueue.hpp  VideoUtils.h  timeutils.h
source/: AudioCapture.cpp  DXGIGraphics.cpp  Encode.cpp  GDIGraphics.cpp  Graphics.cpp  VideoUtils.cpp  main.cpp  timeutils.cpp
